--- a/src/app/invitation/invitation.html
+++ b/src/app/invitation/invitation.html
@@ -25,7 +25,9 @@
           <h1>Mis 15<br>Años</h1>
           <h2>Gaby Alejandra</h2>
           <div class="divider"></div>
-          <div class="butterfly">🦋</div>
+          <audio controls>
+            <source src="assets/musica_15.mp3" type="audio/mpeg">
+          </audio>
         </div>
       </div>
 
