--- a/src/app/invitation/invitation.css
+++ b/src/app/invitation/invitation.css
@@ -122,7 +122,6 @@
 .card:nth-of-type(3) { z-index: 2; } /* Tercera hoja (frente) */
 
 .card-content {
-  border: 2px solid #f48fb1;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -177,12 +176,35 @@
 .container.open.step-2 .card:nth-of-type(1) { z-index: 9; }
 
 /* --- PASO 3: Mostrar Detalles (Hoja 1) --- */
-.container.open.step-3 .card:nth-of-type(3) { transform: translateX(-150%) translateY(-240px) rotate(-20deg); opacity: 0; }
-.container.open.step-3 .card:nth-of-type(2) { transform: translateX(-150%) translateY(-240px) rotate(-20deg); opacity: 0; }
+.container.open.step-3 .card:nth-of-type(3) {
+  transform: translateX(-150%) translateY(-240px) rotate(-20deg);
+  opacity: 0;
+}
+.container.open.step-3 .card:nth-of-type(2) {
+  transform: translateX(150%) translateY(-240px) rotate(20deg); /* Se va a la derecha */
+  opacity: 0;
+}
 .container.open.step-3 .card:nth-of-type(1) {
   z-index: 10;
   transform: translateX(-50%) translateY(-240px) scale(1);
   opacity: 1;
+}
+
+/* --- PASO 4: Guardar en el sobre (Cerrar) --- */
+.container.open.step-4 .card {
+  transform: translateX(-50%) translateY(0) scale(1);
+  opacity: 1;
+  z-index: 2;
+}
+
+.container.open.step-4 .flap.top {
+  transform: rotateX(0deg);
+  z-index: 5;
+  transition-delay: 0.6s;
+}
+
+.container.open.step-4 .envelope-wrapper {
+  transform: translateY(0);
 }
 
 .container.open .envelope-wrapper {
