--- a/src/app/invitation/invitation.html
+++ b/src/app/invitation/invitation.html
@@ -1,4 +1,4 @@
-<div class="container" [class.open]="isOpen" [class.step-1]="step === 1" [class.step-2]="step === 2" [class.step-3]="step === 3">
+<div class="container" [class.open]="isOpen" [class.step-1]="step === 1" [class.step-2]="step === 2" [class.step-3]="step === 3" [class.step-4]="step === 4">
   <div class="envelope-wrapper" (click)="onClick()">
     <div class="envelope">
       <!-- La Tarjeta -->
@@ -25,7 +25,7 @@
           <h1>Mis 15<br>Años</h1>
           <h2>Gaby Alejandra</h2>
           <div class="divider"></div>
-          <audio controls>
+          <audio controls autoplay *ngIf="isOpen">
             <source src="assets/musica_15.mp3" type="audio/mpeg">
           </audio>
         </div>
