--- a/src/app/invitation/invitation.html
+++ b/src/app/invitation/invitation.html
@@ -22,8 +22,11 @@
       <div class="card">
         <div class="card-content">
           <img src="https://i.pinimg.com/originals/dc/b4/05/dcb40592c11bc5126f50c3d2c1b5da2b.png" class="corner-decoration" alt="Decoración">
-          <h1>Mis 15<br>Años</h1>
+          <div class="mis-15">
+            <h1>Mis 15<br>Años</h1>
+          </div>
           <h2>Gaby Alejandra</h2>
+          <img src="https://i.etsystatic.com/52694212/r/il/19f25b/6119085545/il_fullxfull.6119085545_6f4m.jpg" alt="Gaby Alejandra" class="profile-image">
           <div class="divider"></div>
           <audio controls autoplay *ngIf="isOpen">
             <source src="assets/musica_15.mp3" type="audio/mpeg">
