Cambio de color

--- a/src/app/invitation/invitation.html
+++ b/src/app/invitation/invitation.html
@@ -43,5 +43,6 @@
   </div>
   <div class="instruction" *ngIf="!isOpen">
     <p>Toca el sobre para abrir</p>
+    <p>Toca la tarjeta para cambiar de cara</p>
   </div>
 </div>
