--- a/src/app/invitation/invitation.css
+++ b/src/app/invitation/invitation.css
@@ -9,7 +9,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(circle, #fce4ec 0%, #f8bbd0 100%);
+  background: radial-gradient(circle, #4E1E78 0%, #E5C9FB 100%);
   font-family: 'Montserrat', sans-serif;
   overflow: hidden;
   --scale: 1;
@@ -66,7 +66,7 @@
   top: 0;
   left: 0;
   border-width: 238px 0 238px 250px;
-  border-color: transparent transparent transparent #f06292;
+  border-color: transparent transparent transparent #4E1E78;
   z-index: 3;
   border-radius: 5px 0 0 5px;
 }
@@ -75,7 +75,7 @@
   top: 0;
   right: 0;
   border-width: 238px 250px 238px 0;
-  border-color: transparent #ec407a transparent transparent;
+  border-color: transparent #A343F0 transparent transparent;
   z-index: 3;
   border-radius: 0 5px 5px 0;
 }
@@ -84,7 +84,7 @@
   bottom: 0;
   left: 0;
   border-width: 0 250px 252px 250px;
-  border-color: transparent transparent #e91e63 transparent;
+  border-color: transparent transparent #B268F3 transparent;
   z-index: 4;
   border-radius: 0 0 5px 5px;
 }
@@ -93,7 +93,7 @@
   top: 0;
   left: 0;
   border-width: 266px 250px 0 250px;
-  border-color: #f48fb1 transparent transparent transparent;
+  border-color: #7B3DB1 transparent transparent transparent;
   z-index: 5;
   transform-origin: top;
   transition: transform 0.4s ease 0.4s, z-index 0.2s linear 0.4s; /* Retraso al cerrar */
@@ -145,8 +145,8 @@
 .card h1 { font-family: 'Ranchers', cursive; color: #B268F3; margin: 0; font-size: 2.5rem; line-height: 1; }
 .card h2 { font-family: 'Great Vibes', cursive; color: #B268F3; margin: 10px 0; font-size: 3rem; font-weight: bold; }
 .card p { font-size: 0.8rem; color: #555; margin: 3px 0; line-height: 1.3; }
-.divider { width: 40px; height: 2px; background: #d81b60; margin: 8px auto; }
-.details { margin-top: 10px; border-top: 1px dashed #f8bbd0; padding-top: 5px; width: 90%; }
+.divider { width: 40px; height: 2px; background: #B268F3; margin: 8px auto; }
+.details { margin-top: 10px; border-top: 1px dashed #B268F3; padding-top: 5px; width: 90%; }
 .corner-decoration { position: absolute; top: 0; left: 0; width: 140px; height: auto; z-index: 1; }
 .butterfly { font-size: 2rem; margin-top: 10px; animation: float 3s ease-in-out infinite; }
 
@@ -245,7 +245,7 @@
 /* Texto de instrucción */
 .instruction {
   margin-top: 50px;
-  color: #880e4f;
+  color: #fff;
   font-weight: 600;
   animation: float 2s ease-in-out infinite;
 }
