aumento de la tarjeta

--- a/src/app/invitation/invitation.html
+++ b/src/app/invitation/invitation.html
@@ -1,7 +1,7 @@
 <div class="container" [class.open]="isOpen" [class.step-1]="step === 1" [class.step-2]="step === 2" [class.step-3]="step === 3" [class.step-4]="step === 4">
   <div class="envelope-wrapper" (click)="onClick()">
     <div class="envelope">
-      <!-- La Tarjeta -->
+      <!-- La Tarjeta, aumentar el ancho de la tarjeta -->
       <!-- Hoja 1 (Atrás): Detalles -->
       <div class="card">
         <div class="card-content">
@@ -33,7 +33,6 @@
           </audio>
         </div>
       </div>
-
       <!-- Partes del Sobre -->
       <div class="flap left"></div>
       <div class="flap right"></div>
