aumentar el alto de la tarjeta

--- a/src/app/invitation/invitation.html
+++ b/src/app/invitation/invitation.html
@@ -2,7 +2,7 @@
   <div class="envelope-wrapper" (click)="onClick()">
     <div class="envelope">
       <!-- La Tarjeta, aumentar el ancho de la tarjeta -->
-      <!-- Hoja 1 (Atrás): Detalles -->
+      <!-- Hoja 1 (Atrás): Detalles, cambiar el tipo de letra -->
       <div class="card">
         <div class="card-content">
           <div class="details">
@@ -15,7 +15,12 @@
       <!-- Hoja 2 (Medio): Frase -->
       <div class="card">
         <div class="card-content">
-          <p>Te invito a celebrar este<br>momento tan especial.</p>
+          <p class="date">SABADO 07 DE MARZO</p>
+          <p class="time">HORA: 8.00 PM</p>
+          <p class="parents">MIS PADRES</p>
+          <p class="name">EDITH CHAFLOQUE MILLONES</p>
+          <p class="name">JAVIER CHORRES</p>
+          <p class="frase">Hay momentos en la vida que representan un antes y un despues. El comienzo y el fin de una etapa, y lo que los hace realmente especial, son las personas con las que se comparten. Quiero que tu seas una de ellas.</p>
         </div>
       </div>
       <!-- Hoja 3 (Frente): Título -->
