--- a/src/app/invitation/invitation.html
+++ b/src/app/invitation/invitation.html
@@ -15,22 +15,24 @@
       <!-- Hoja 2 (Medio): Frase -->
       <div class="card">
         <div class="card-content">
-          <div class="countdown">
-            <div class="time-box">
-              <span class="number">{{ days }}</span>
-              <span class="label">Días</span>
-            </div>
-            <div class="time-box">
-              <span class="number">{{ hours }}</span>
-              <span class="label">Hs</span>
-            </div>
-            <div class="time-box">
-              <span class="number">{{ minutes }}</span>
-              <span class="label">Min</span>
-            </div>
-            <div class="time-box">
-              <span class="number">{{ seconds }}</span>
-              <span class="label">Seg</span>
+          <div class="countdown-wrapper">
+            <div class="countdown">
+              <div class="time-box">
+                <span class="number">{{ days }}</span>
+                <span class="label">Días</span>
+              </div>
+              <div class="time-box">
+                <span class="number">{{ hours }}</span>
+                <span class="label">Hs</span>
+              </div>
+              <div class="time-box">
+                <span class="number">{{ minutes }}</span>
+                <span class="label">Min</span>
+              </div>
+              <div class="time-box">
+                <span class="number">{{ seconds }}</span>
+                <span class="label">Seg</span>
+              </div>
             </div>
           </div>
           <p class="date">SABADO 07 DE MARZO</p>
