--- a/src/app/invitation/invitation.html
+++ b/src/app/invitation/invitation.html
@@ -63,6 +63,12 @@
       <div class="flap right"></div>
       <div class="flap bottom"></div>
       <div class="flap top"></div>
+      <div class="neon-border-container">
+        <span class="neon-line top"></span>
+        <span class="neon-line right"></span>
+        <span class="neon-line bottom"></span>
+        <span class="neon-line left"></span>
+      </div>
     </div>
   </div>
   <div class="instruction" *ngIf="!isOpen">
