--- a/src/app/invitation/invitation.html
+++ b/src/app/invitation/invitation.html
@@ -39,7 +39,7 @@
           <p class="time">HORA: 8.00 PM</p>
           <p class="parents">MIS PADRES</p>
           <p class="name">EDITH CHAFLOQUE MILLONES</p>
-          <p class="name">JAVIER CHORRES</p>
+          <p class="name">JAVIER CHORRES GASTULO</p>
           <p class="frase">Hay momentos en la vida que representan un antes y un despues. El comienzo y el fin de una etapa, y lo que los hace realmente especial, son las personas con las que se comparten. Quiero que tu seas una de ellas.</p>
         </div>
       </div>
