--- a/src/app/invitation/invitation.css
+++ b/src/app/invitation/invitation.css
@@ -124,6 +124,12 @@
 .card:nth-of-type(2) { z-index: 2; } /* Segunda hoja (medio) */
 .card:nth-of-type(3) { z-index: 2; } /* Tercera hoja (frente) */
 
+/* Fijar el inicio del contenido para que crezca hacia abajo */
+.card:nth-of-type(2) .card-content {
+  justify-content: flex-start;
+  padding-top: 140px;
+}
+
 .card-content {
   height: 100%;
   font-family: 'Brush Script MT', cursive; /* Tipo de letra más festivo */
@@ -173,8 +179,10 @@
 }
 
  .card-content .frase {
-  font-size: 1.2em;
-  margin-top: 0.5em; /* Espacio sobre la frase */
+  font-size: 1.7em;
+  margin-top: 0.4em; /* Espacio sobre la frase */
+  line-height: 1.2;
+  margin-bottom: 0.4em;
   text-align: center; /* Centra la frase */
 }
 
