--- a/src/app/invitation/invitation.html
+++ b/src/app/invitation/invitation.html
@@ -40,7 +40,7 @@
           <p class="parents">MIS PADRES</p>
           <p class="name">EDITH CHAFLOQUE MILLONES</p>
           <p class="name">JAVIER CHORRES GASTULO</p>
-          <p class="frase">Hay momentos en la vida que representan un antes y un despues. El comienzo y el fin de una etapa, y lo que los hace realmente especial, son las personas con las que se comparten. Quiero que tu seas una de ellas.</p>
+          <p class="frase">"Hay momentos que marcan un antes y un después, instantes donde una etapa termina y otra florece. Pero lo que hace que este camino sea inolvidable son las personas que me acompañan, y por eso, mi mayor regalo sería que tú fueras una de ellas."</p>
         </div>
       </div>
       <!-- Hoja 3 (Frente): Título -->
