--- a/src/app/invitation/invitation.html
+++ b/src/app/invitation/invitation.html
@@ -6,10 +6,17 @@
       <div class="card">
         <div class="card-content">
           <div class="details">
-            <p style="font-size: 2.0em;"><strong>Lugar</strong></p>
-            <iframe src="https://maps.google.com/maps?q=-12.0149853,-77.0963236&hl=es&z=16&output=embed" width="100%" height="150" style="border:0; margin-top: 10px; border-radius: 8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <a href="https://www.google.com/maps/place/Sal%C3%B3n+de+Recepciones+Babilonia/@-12.0141384,-77.0981903,17.75z/data=!4m10!1m2!2m1!1sBabilonia,+Avenida+Tomas+Marsano!3m6!1s0x9105cfa84812ad5b:0x9504b241619190ce!8m2!3d-12.0149853!4d-77.0963236!15sCiBCYWJpbG9uaWEsIEF2ZW5pZGEgVG9tYXMgTWFyc2Fub-ABAA!16s%2Fg%2F11vyqy2zh8?entry=ttu&g_ep=EgoyMDI2MDEyMS4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D" target="_blank" style="display: block; margin-top: 5px; color: #A343F0; text-decoration: none; font-weight: bold; font-size: 1.2rem;">Ver ubicación</a>
+            <h3 class="section-title">Lugar</h3>
+            <iframe class="map-frame" src="https://maps.google.com/maps?q=-12.0149853,-77.0963236&hl=es&z=16&output=embed" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <a class="map-link" href="https://www.google.com/maps/place/Sal%C3%B3n+de+Recepciones+Babilonia/@-12.0141384,-77.0981903,17.75z/data=!4m10!1m2!2m1!1sBabilonia,+Avenida+Tomas+Marsano!3m6!1s0x9105cfa84812ad5b:0x9504b241619190ce!8m2!3d-12.0149853!4d-77.0963236!15sCiBCYWJpbG9uaWEsIEF2ZW5pZGEgVG9tYXMgTWFyc2Fub-ABAA!16s%2Fg%2F11vyqy2zh8?entry=ttu&g_ep=EgoyMDI2MDEyMS4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D" target="_blank">Ver ubicación</a>
             <p class="location-text">Salón de recepciones "BABILONIA" Av. Tomás Valle Mz. O Lote 22 (Nro 3429) Urb. Jorge Chavez - CALLAO</p>
+            <h3 class="section-title">Vestimenta</h3>
+            <img src="https://w7.pngwing.com/pngs/41/700/png-transparent-bride-and-groom-dress-tuxedo-wedding-dress-suit-bride-suit-white-wedding-happy-birthday-vector-images.png" class="dress-code-icon" alt="Vestimenta Formal">
+            <p class="location-text">"Código de vestimenta: Formal. (Agradecemos evitar los colores lavanda y lila para el vestuario de los invitados)."</p>
+            <h3 class="section-title">Confirmar Asistencia</h3>
+            <button class="confirm-btn">CONFIRMAR</button>
+            <p class="location-text">Confirmar su asistencia antes del 28 de febrero</p>
+            <h3 class="section-title">¡Te esperamos..!</h3>
           </div>
         </div>
       </div>
