--- a/src/app/invitation/invitation.html
+++ b/src/app/invitation/invitation.html
@@ -12,7 +12,7 @@
             <p class="location-text">Salón de recepciones "BABILONIA" Av. Tomás Valle Mz. O Lote 22 (Nro 3429) Urb. Jorge Chavez - CALLAO</p>
             <h3 class="section-title">Vestimenta</h3>
             <img src="https://w7.pngwing.com/pngs/41/700/png-transparent-bride-and-groom-dress-tuxedo-wedding-dress-suit-bride-suit-white-wedding-happy-birthday-vector-images.png" class="dress-code-icon" alt="Vestimenta Formal">
-            <p class="location-text">"Código de vestimenta: Sport Elegfante. (Agradecemos evitar los colores lavanda y lila para el vestuario de los invitados)."</p>
+            <p class="location-text">"Código de vestimenta: Sport Elegante. (Agradecemos evitar los colores lavanda y lila para el vestuario de los invitados)."</p>
             <h3 class="section-title">Confirmar Asistencia</h3>
             <a href="https://forms.gle/sQXgvXdmRxBSQJWJ8" target="_blank" class="confirm-btn">CONFIRMAR</a>
             <p class="location-text">Confirmar su asistencia antes del 28 de febrero</p>
