--- a/src/app/invitation/invitation.html
+++ b/src/app/invitation/invitation.html
@@ -48,6 +48,9 @@
           <p class="parents">MIS PADRES</p>
           <p class="name">EDITH CHAFLOQUE MILLONES</p>
           <p class="name">JAVIER CHORRES GASTULO</p>
+          <p class="parents">MIS PADRINOS</p>
+          <p class="name">MONICA CHAFLOQUE MILLONES</p>
+          <p class="name">JORGE CHAFLOQUE MILLONES</p>
           <p class="frase">"Hay momentos que marcan un antes y un después, instantes donde una etapa termina y otra florece. Pero lo que hace que este camino sea inolvidable son las personas que me acompañan, y por eso, mi mayor regalo sería que tú fueras una de ellas."</p>
         </div>
       </div>
