--- a/src/app/invitation/invitation.html
+++ b/src/app/invitation/invitation.html
@@ -1,5 +1,5 @@
 <div class="container" [style.backgroundImage]="'url(https://wallpapers.com/images/featured/estetica-lila-claro-rw2vix1r99tji173.jpg)'" [class.open]="isOpen" [class.step-1]="step === 1" [class.step-2]="step === 2" [class.step-3]="step === 3" [class.step-4]="step === 4">
-  <div class="envelope-wrapper" (click)="onClick()" style="transform: scale(1.2);">
+  <div class="envelope-wrapper" (click)="onClick()">
     <div class="envelope">
       <!-- La Tarjeta, aumentar el ancho de la tarjeta -->
       <!-- Hoja 1 (Atrás): Detalles, cambiar el tipo de letra -->
